# skills-portfolio

./: LICENSE  README.md
.github/: CODEOWNERS
ai/ai-architecture-reviewboard/: Agents.md  requirements.txt
ai/automated-loadtest-craft/: .env  .env.example  Agents.md  Dockerfile  Makefile  README.md  docker-compose.yaml  requirements.txt  test_github.py  test_github_parsing.py
ai/smartcart-ai/: .gitignore  Dockerfile  Makefile  README.md  WALKTHROUGH.md  docker-compose.yml  pyproject.toml
ai/smartcart-ai/chroma_db/: chroma.sqlite3
ai/smartcart-ai/data/: orders.csv  products.csv
ai/smartcart-ai/src/application/: recommendation_service.py
ai/smartcart-ai/src/domain/: entities.py  interfaces.py
ai/smartcart-ai/src/infrastructure/db/: csv_loader.py  vector_store.py
ai/smartcart-ai/src/infrastructure/llm/: groq_client.py
ai/smartcart-ai/src/infrastructure/repositories/: in_memory_repos.py
ai/smartcart-ai/src/interface/: streamlit_app.py
ai/smartcart-ai/tests/: test_csv_loader.py  test_domain.py  test_recommendation_service.py
golang/: README.md
golang/catalog-service-grpc-http/: Dockerfile  Makefile  README.md  go.mod  go.sum
golang/expense-tracker/: .env  README.md  docker-compose.yml
java-spring/: README.md
java-spring/order-processing-workflow/: docker-compose.yaml  (+1 more)
kubernetes/: README.md
python/: README.md
python/mcp/mcp-rag/: README.md  pyproject.toml
python/mcp/mcp-rag/src/mcp_rag/: embeddings.py  groq_client.py  server.py  vectordb.py
python/mcp/mcp-rag/src/mcp_rag.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
(+123 files in other folders)
