[tool.poetry]
name = "smartcart-ai"
version = "0.1.0"
description = "LLM Powered Product Recommendation Engine"
authors = ["Antigravity <antigravity@google.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.31.0"
groq = "^1.0.0"
chromadb = "^0.4.22"
pydantic = "^2.6.0"
pandas = "^2.2.0"
numpy = "^1.26.4"
python-dotenv = "^1.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
black = "^24.1.1"
isort = "^5.13.2"
flake8 = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = [
  "."
]
